<resources>
    <string name="app_name">Prime</string>
    <string name="Correct">Correct</string>
    <string name="Pass">Pass</string>
    <string name="Incorrect">Incorrect</string>
    <string name="Message">New Text</string>
    <string name="Quit">Quit</string>
    <string name="Desc">Desc</string>
    <string name="Hint">Hint</string>
    <string name="Cheat">Cheat</string>
    <string name="Prime">Prime Numbers</string>
    <string name="description">Prime Numbers are those special numbers greater than 1 which have only two factors: 1 and the number itself.
    For example : 7</string>
</resources>
